<resources>
    <string name="app_name">INIT</string>
    <string name="SmartIQ">SmartIQ</string>
    <string name="New_game">Новая игра</string>
    <string name="Leaderboard">Таблица лидеров</string>
    <string name="settings">Настройки</string>
    <string name="Main_menu">Главное меню</string>
    <string name="login">Войти</string>
    <string name="Password">Пароль</string>
    <string name="User">Пользователь</string>
    <string name="INIT">Институт новых информационных технологий</string>
    <string name="menu">Меню</string>
    <string name="smariq">SmarIQ</string>
    <string name="news">Новости</string>
    <string name="cabinet">Кабинет</string>
    <string name="persanal_card">Личная карточка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sccore">Счет :</string>
    <string name="exit">Выход</string>
    <string name="studticket">Студенческий билет</string>
    <string name="arabaeva">Кыргызский Государственный Университет им.Арабаева</string>
    <string name="fullname">Fullname</string>
    <string name="group">group</string>
    <string name="birthday">birthday</string>
    <string name="email">email</string>
    <string name="inn">INN</string>
    <string name="studid">ID Студента</string>
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->

</resources>