<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FirstFragment"
    android:background="#1C1A46">

    <ImageView
        android:id="@+id/logo_init"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo_one"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/init_text_menu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/INIT"
        android:layout_gravity="top|center"
        android:layout_marginTop="285dp"
        android:textSize="20sp"
        android:fontFamily="@font/spartanmb_extrabold"
        android:textColor="#FFFFFF"
        />

    <EditText
        style="@style/Boldstyle"
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:imeOptions="actionNext"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/login_icon"
        android:drawablePadding="3dp"
        android:hint="@string/User"
        android:maxLength="10"
        android:fontFamily="@font/spartanmb_extrabold"
        android:backgroundTint="#FFFFFF"
        android:inputType="text|textVisiblePassword"


        />



    <EditText
        style="@style/Boldstyle"
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:paddingBottom="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="3dp"
        android:drawableEnd="@drawable/panda_closed"
        android:hint="@string/Password"
        android:backgroundTint="#FFFFFF"
        android:inputType="text|textVisiblePassword"

        />



    <Button
        style="@style/ButtonStyle"
        android:id="@+id/loginButton1"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/login"
        android:textColor="#FFF"
        android:fontFamily="@font/spartanmb_extrabold"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:foreground="@drawable/animated_button"
        android:layout_marginTop="170dp"

        />




</FrameLayout>