<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liner_gradient"
    tools:context=".screens.Mainmenu">

    <FrameLayout
        android:id="@+id/mainmenu_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />



    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:background="#0E1248"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingTop="11dp"
        android:layout_gravity="bottom">

        <!-- Первая пара: Картинка 1 и Текст 1 -->
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onLinearLayoutClick"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/icon1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/leaguespartanbold_ru"
                android:text="@string/menu"
                android:textColor="#FFFFFF"
                android:textFontWeight="500" />

        </LinearLayout>

        <!-- Вторая пара: Картинка 2 и Текст 2 -->
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onLinearLayoutClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:src="@drawable/smartiq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartanmb_extrabold"
                android:text="@string/smariq"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Третья пара: Картинка 3 и Текст 3 -->
        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onLinearLayoutClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:scaleType="fitCenter"
                android:src="@drawable/news" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/leaguespartanbold_ru"
                android:text="@string/news"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Четвёртая пара: Картинка 4 и Текст 4 -->
        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onLinearLayoutClick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/login_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/leaguespartanbold_ru"
                android:text="@string/cabinet"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>





</FrameLayout>