<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.student_pass"
    android:paddingStart="26dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="358dp"
        android:layout_height="634dp"
        android:layout_marginTop="21dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame_liner_gradient">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/spartanmb_extrabold"
                android:gravity="center"
                android:text="@string/studticket"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="350dp"
                android:layout_height="216dp"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/stud_front"
                android:scaleType="centerCrop">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/spartanmb_extrabold"
                    android:src="@drawable/logo_main" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView"
                    android:text="@string/arabaeva"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/spartanmb_extrabold"
                    android:gravity="center"
                    android:text="@string/studticket"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/studavatar"
                    android:layout_width="61dp"
                    android:layout_height="84dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="68dp"
                    android:src="@color/b3" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/studavatar"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="ФИО"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="@string/studid"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="Направления"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="Дата"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/linearLayout"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/studfullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="@string/fullname"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/studid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="@string/inn"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/direction"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="Программная Инженерия"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/studdatastart"
                        android:layout_width="79dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="Сентябрь 2020"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/studdataend"
                        android:layout_width="79dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/spartanmb_extrabold"
                        android:text="Май 2024"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="216dp"
                android:layout_below="@+id/relativeLayout2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/stud_back"
                android:scaleType="centerCrop">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/spartanmb_extrabold"
                    android:src="@drawable/logo_main" />

                <TextView
                    android:id="@+id/textViewback1"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView1"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView1"
                    android:text="@string/arabaeva"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/textViewback2"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewback1"
                    android:layout_alignStart="@+id/imageView1"
                    android:layout_marginTop="18dp"
                    android:text="Студенты выбирают чаще авторитетных людей, в смысле известных, публичных, чьи фамилии на слуху, облеченных властью или ярких и интересных."
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/textViewback3"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewback2"
                    android:layout_alignStart="@+id/imageView1"
                    android:layout_marginTop="16dp"
                    android:text="Студенты выбирают чаще авторитетных людей, в смысле известных, публичных, "
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/textViewback4"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewback3"
                    android:layout_alignStart="@+id/imageView1"
                    android:layout_marginTop="22dp"
                    android:text="+(312) 66-03-47"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/textViewback5"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewback4"
                    android:layout_alignStart="@+id/imageView1"
                    android:layout_marginTop="5dp"
                    android:text="Адрес: г. Бишкек, ул. Раззакова 51А"
                    android:textColor="@color/white"
                    android:textSize="8sp" />



            </RelativeLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>